# Autonomous-Navigation-Via-Traffic-Sign-Detection

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
ros2_ws/src/puzzlebot_controller/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/puzzlebot_controller/include/puzzlebot_controller/: navigator_system.hpp
ros2_ws/src/puzzlebot_controller/include/puzzlebot_controller/controller/: puzzlebot_controller.hpp  steering_controller.hpp
ros2_ws/src/puzzlebot_controller/include/puzzlebot_controller/state_machine/: all_states.hpp  state.hpp  state_machine.hpp
ros2_ws/src/puzzlebot_controller/include/puzzlebot_controller/utils/: chronometer.hpp  robot_context.hpp
ros2_ws/src/puzzlebot_controller/launch/: master.launch.py  nav_system.launch.py
ros2_ws/src/puzzlebot_controller/src/: main.cpp  navigator_system.cpp
ros2_ws/src/puzzlebot_controller/src/controller/: puzzlebot_controller.cpp
ros2_ws/src/puzzlebot_controller/src/state_machine/: state_machine.cpp
ros2_ws/src/puzzlebot_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/puzzlebot_interfaces/msg/: NavigationTarget.msg  RoadPerception.msg  TrafficSignDetection.msg
ros2_ws/src/puzzlebot_vision_system/road_perception/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/puzzlebot_vision_system/road_perception/road_perception/: path_interpreter.py
ros2_ws/src/puzzlebot_vision_system/road_perception/road_perception/road_segmenter/: road_component.py  road_segmenter.py
ros2_ws/src/puzzlebot_vision_system/road_perception/road_perception/scene/: navigation_target.py  scene_parser.py
ros2_ws/src/puzzlebot_vision_system/road_perception/road_perception/utils/: perception_context.py  primitives.py  road_visualizer.py
ros2_ws/src/puzzlebot_vision_system/traffic_sign_tracker/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/puzzlebot_vision_system/traffic_sign_tracker/traffic_sign_tracker/: traffic_sign_tracker.py
ros2_ws/src/puzzlebot_vision_system/traffic_sign_tracker/traffic_sign_tracker/tracker/: centroid_tracker.py  detection.py  track.py
ros2_ws/src/puzzlebot_vision_system/traffic_sign_tracker/traffic_sign_tracker/utils/: visualizer.py
simulation_ws/src/ros_gz_puzzlebot_gazebo/: CMakeLists.txt  README.md  package.xml
simulation_ws/src/ros_gz_puzzlebot_gazebo/hooks/: ros_gz_puzzlebot_gazebo.dsv.in
simulation_ws/src/ros_gz_puzzlebot_gazebo/launch/: main_puzzlebot_lab.launch.py  start_puzzlebot_world.launch.py
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/border_box_v1/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/border_box_v2/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/border_box_v2/meshes/: border_box.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/give_way/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/give_way/meshes/: give_way.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/go_ahead/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/go_ahead/meshes/: go_ahead.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/max_speed/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/max_speed/meshes/: max_speed.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/puzzletrack_piece_1/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/puzzletrack_piece_1/meshes/: piece_1.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/puzzletrack_piece_2/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/puzzletrack_piece_2/meshes/: piece_2.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/puzzletrack_piece_3/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/puzzletrack_piece_3/meshes/: piece_3.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/roadwork/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/roadwork/meshes/: roadwork.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/roundabout/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/roundabout/meshes/: roundabout.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/stop/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/stop/meshes/: stop.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/traffic_light/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/traffic_light/meshes/: traffic_light.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/turn_left/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/turn_left/meshes/: turn_left.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/turn_right/: model.config  model.sdf
simulation_ws/src/ros_gz_puzzlebot_gazebo/models/turn_right/meshes/: turn_right.dae
simulation_ws/src/ros_gz_puzzlebot_gazebo/worlds/: puzzletrack_v1.sdf  puzzletrack_v2.sdf
