<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_interfaces</name>
  <version>1.0.0</version>
  <description>
    Custom ROS 2 message definitions for the Puzzlebot autonomous navigation stack. 
    Includes interfaces for road perception, traffic sign tracking, and navigation guidance.
  </description>
  <maintainer email="victormvm05043@gmail.com">Victor Manuel Vazquez Morales</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>