<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>road_perception</name>
  <version>1.0.0</version>
  <description>
    Advanced road infrastructure perception system for autonomous navigation. 
    Implements semantic segmentation, geometric profiling via distance transforms, 
    and egocentric path interpretation for steering target generation.
  </description>
  
  <!-- Mantenedor actualizado según perfil profesional -->
  <maintainer email="victormvm05043@gmail.com">Victor Manuel Vazquez Morales</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 Core Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>puzzlebot_interfaces</depend>

  <!-- Python System Dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-skimage</exec_depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>